<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBlue"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.Visualizer">
...
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:scaleX="-1"
            android:src="@android:drawable/ic_menu_revert" />

        <Spinner
            android:id="@+id/spinner_tree_options"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:spinnerMode="dropdown"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="18sp" />
...
            android:layout_gravity="top"
            android:layout_marginRight="15dp"
            android:textSize="15sp"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:gravity="center"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:textColor="@color/backgroundWhite"
            android:text="Save"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_load"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_load"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:textColor="@color/backgroundWhite"
            android:text="Load"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
...
