<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/renameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:hint="File name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/renameConfirmBtn"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Rename"
                android:textAllCaps="false"
                android:background="@drawable/homepage_button"
                android:textColor="@color/textHomepageButtons"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/renameCancelBtn"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textAllCaps="false"
                android:background="@drawable/homepage_button"
                android:textColor="@color/textHomepageButtons"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>